# CRA-AI

./: .gitignore  Backlog.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.github/ISSUE_TEMPLATE/: question.md  task.md
.github/workflows/: frontend-lint.yml  fullstack-ci-cd.yml  python-lint.yml
cra-ai-backend/: Dockerfile  mypy.ini  pyproject.toml  requirements.txt
cra-ai-backend/code/: main.py
cra-ai-backend/tests/: test_main.py
cra-ai-database/: .env.example  postgresql_init.sql.example
cra-ai-frontend/: .eslintrc.js  Dockerfile  nginx.conf  package-lock.json  package.json
docs/: Architecture.md
docs/assets/: System-Context-Diagram.mmd
scripts/: deploy_staging.sh
