[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.poetry]
name = "CRA-AI"
version = "0.1.0"
description = ""
authors = ["Aridex"]
packages = [{ include = "main.py", from = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
bandit = "^1.7.8"
# ... weitere Entwicklungs-Abhängigkeiten ...
